src/parse/snapshots/script_lang__parse__test__unary__neg.snap
---
source: src/parse/test.rs
assertion_line: 503
expression: ast

---
UnaryOp(
    UnaryOp {
        span: Span {
            start: 0,
            end: 0,
        },
        expr: Literal(
            Number(
                10.0,
                Span {
                    start: 0,
                    end: 0,
                },
            ),
        ),
        kind: Neg,
    },
)
