src/parse/snapshots/script_lang__parse__test__unary__not.snap
---
source: src/parse/test.rs
assertion_line: 496
expression: ast

---
UnaryOp(
    UnaryOp {
        span: Span {
            start: 0,
            end: 0,
        },
        expr: Literal(
            Boolean(
                true,
                Span {
                    start: 0,
                    end: 0,
                },
            ),
        ),
        kind: Not,
    },
)
